FJ-91 - Aula 2 - Garbage Colection (cont) - Encapsulamento